# esp32-mini-projects

./: .gitignore  README.md
alert-cam/: CMakeLists.txt  sdkconfig
alert-cam/main/: CMakeLists.txt  http_server.c  http_server.h  idf_component.yml  main.c  wifi_sta.c
alert-cam/server/: esp-camera-server.py
cs16-radio/: CMakeLists.txt  partitions.csv  sdkconfig
cs16-radio/main/: CMakeLists.txt  affirmative.h  all_right_lets_move_out.h  audio.c  audio.h  bomb_has_been_defused.h  circle_around_back.h  (+37 more)
ds18b20-demo/: CMakeLists.txt
http-client-demo/: CMakeLists.txt
laser-alarm/: CMakeLists.txt
ldr-box-alarm/: CMakeLists.txt
led-strip/: CMakeLists.txt
lvgl-demo-weact-display/: CMakeLists.txt  sdkconfig
lvgl-gif/: CMakeLists.txt  sdkconfig
max98357a-demo/: CMakeLists.txt  sdkconfig
nvs-demo/: CMakeLists.txt
reed-switch-demo/: CMakeLists.txt
retro-buzzer/: CMakeLists.txt  README.md
stepper-motor-demo/: CMakeLists.txt
touch-demo-TTP223/: CMakeLists.txt
wifi-sta-demo/: CMakeLists.txt
world-cup-guesser/: CMakeLists.txt  sdkconfig
world-cup-guesser/main/: CMakeLists.txt  algeria.c  argentina.c  australia.c  austria.c  belgium.c  bosnia_and_herzegovina.c  brazil.c  canada.c  cape_verde.c  colombia.c  croatia.c  dr_congo.c  ecuador.c  egypt.c  england.c  france.c  germany.c  ghana.c  ivory_coast.c  japan.c  main.c  match_simulator.c  match_simulator.h  mexico.c  morocco.c  netherlands.c  norway.c  paraguay.c  portugal.c  senegal.c  south_africa.c  spain.c  st7789.c  st7789.h  sweden.c  switzerland.c  team_image.c  team_image.h  tournament.c  (+2 more)
(+36 files in other folders)
