idf_component_register(
    SRCS
        "main.c"
        "tournament.c"
        "match_simulator.c"
        "st7789.c"
        "team_image.c"

        "algeria.c"
        "argentina.c"
        "australia.c"
        "austria.c"
        "belgium.c"
        "bosnia_and_herzegovina.c"
        "brazil.c"
        "canada.c"
        "cape_verde.c"
        "colombia.c"
        "croatia.c"
        "dr_congo.c"
        "ecuador.c"
        "egypt.c"
        "england.c"
        "france.c"
        "germany.c"
        "ghana.c"
        "ivory_coast.c"
        "japan.c"
        "mexico.c"
        "morocco.c"
        "netherlands.c"
        "norway.c"
        "paraguay.c"
        "portugal.c"
        "senegal.c"
        "south_africa.c"
        "spain.c"
        "sweden.c"
        "switzerland.c"
        "united_states.c"
    INCLUDE_DIRS "."
)